--- a/lib/main.css
+++ b/lib/main.css
@@ -25,6 +25,7 @@ img {
 
 .cards {
 	transition: .5s;
+	height: 80px;
 }
 
 .card {
@@ -123,7 +124,7 @@ img {
 .player .points {
 	width: 164px;
 	left: 295px;
-	bottom: -30px;
+	bottom: -50px;
 }
 
 .dealer .points {
