--- a/lib/main.css
+++ b/lib/main.css
@@ -270,8 +270,20 @@ img {
     height: 420px;
 }
 .logo {
-	width: 60px;
+	width: 130px;
 	position: absolute;
-	top: -20px;
+	top: -10px;
 	left: -100px;
+}
+
+.noExtension, .errNetwork {
+	height: 100vh;
+	position: absolute;
+	font-size: 30px;
+	padding: 100px;
+	z-index: 10;
+	background: rgba(255,255,255,.8);	
+	width: 100vw;
+	top: 0;
+	left: 0;
 }
