--- a/lib/main.css
+++ b/lib/main.css
@@ -250,7 +250,7 @@ img {
 	margin-right: 20px;	
 }
 
-#rules, #contact {
+#rules, #contact, #video {
 	background: #fff;
 	width: 1100px;
 	margin: 0 auto;
@@ -258,7 +258,7 @@ img {
 	position: relative;
 }
 
-#rules, #contact h1 {
+#rules h1, #contact h1, #video h1 {
 	margin-bottom: 30px;
 }
 
@@ -286,4 +286,14 @@ img {
 	width: 100vw;
 	top: 0;
 	left: 0;
+}
+
+#video iframe {
+	margin: 0 auto; 
+	display: block;
+	width: 560px;
+}
+
+#video h1 {
+	text-align: center;
 }
